cmake_minimum_required(VERSION 2.8)
project(data-structure)

set(CMAKE_C_STANDARD 90)

add_subdirectory(Status)
add_subdirectory(0201_SqList)
add_subdirectory(0202_Union)
add_subdirectory(0203_MergeSqList)
add_subdirectory(0204_LinkList)
add_subdirectory(0205_MergeList)
add_subdirectory(0206_SLinkList)
add_subdirectory(0207_Difference)

add_subdirectory(0306_Hanoi)
